# tiddl-gui

./: .gitignore  README.md  pyproject.toml
docs/: gui.md
gui/: app.py  client.py  download_manager.py  error_handler.py  main_window.py
gui/widgets/: auth_dialog.py  download_panel.py  resource_detail_dialog.py  resource_panel.py  settings_dialog.py
tests/core/api/: test_api_api.py  test_api_client.py
tests/core/auth/: test_auth_client.py
tiddl/cli/commands/: __init__.py
tiddl/cli/commands/download/: __init__.py  downloader.py
tiddl/cli/commands/subcommands/: fav.py  search.py
tiddl/cli/utils/: download.py
tiddl/cli/utils/auth/: core.py
tiddl/core/: resolver.py
tiddl/core/api/: api.py  client.py
tiddl/core/auth/: client.py
tiddl/core/utils/: __init__.py  parse.py
