[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tiddl*", "gui*"]

[project]
name = "tiddl"
version = "3.4.4a1"
description = "Download Tidal tracks with CLI downloader."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "oskvr37" }]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "aiofiles>=25.1.0",
  "aiohttp>=3.13.2",
  "m3u8>=6.0.0",
  "mutagen>=1.47.0",
  "pydantic>=2.12.4",
  "aiohttp-client-cache>=0.12.0",
  "aiosqlite>=0.20.0",
  "requests>=2.32.5",
  "typer>=0.20.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5", "qasync>=0.23"]

[project.urls]
homepage = "https://github.com/oskvr37/tiddl"

[project.scripts]
tiddl = "tiddl.cli.app:app"
tiddl-gui = "gui.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*/models/*", "*/models.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.25.0",
]
